--- a/src/services/Apotea.Design.ActorModel.Services.Scale/Apotea.Design.ActorModel.Services.Scale.csproj
+++ b/src/services/Apotea.Design.ActorModel.Services.Scale/Apotea.Design.ActorModel.Services.Scale.csproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Apotea.Design.ActorModel.Services.IMessages\Apotea.Design.ActorModel.Services.IMessages.csproj" />
+	  <ProjectReference Include="..\..\Apotea.Design.ActorModel.Services.ServicesDefault\Apotea.Design.ActorModel.Services.ServicesDefault.csproj" />
 	</ItemGroup>
 
 </Project>
