--- a/src/services/Apotea.Design.ActorModel.Services.Scale/appsettings.json
+++ b/src/services/Apotea.Design.ActorModel.Services.Scale/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClusterSiloConfiguration": {
+    "IpAddress": "127.0.0.1",
+    "Port": 4000,
+    "RedisConnectionString": "localhost"
+  }
 }
