--- a/src/Apotea.Design.ActorModel.Services.IMessages/Apotea.Design.ActorModel.Services.IMessages.csproj
+++ b/src/Apotea.Design.ActorModel.Services.IMessages/Apotea.Design.ActorModel.Services.IMessages.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
+	<!--<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-	</PropertyGroup>
+	</PropertyGroup>-->
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.7.1" />
-	  <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
