--- a/src/services/Apotea.Design.ActorModel.Services.Scale/Apotea.Design.ActorModel.Services.Scale.csproj
+++ b/src/services/Apotea.Design.ActorModel.Services.Scale/Apotea.Design.ActorModel.Services.Scale.csproj
@@ -3,6 +3,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
