--- a/test/load/Apotea.Design.ActorModel.LoadTests/Apotea.Design.ActorModel.LoadTests.csproj
+++ b/test/load/Apotea.Design.ActorModel.LoadTests/Apotea.Design.ActorModel.LoadTests.csproj
@@ -11,6 +11,8 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+		<PackageReference Include="NBomber" Version="5.6.0" />
+		<PackageReference Include="NBomber.Http" Version="5.1.0" />
 		<PackageReference Include="xunit" Version="2.7.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.8">
 		  <PrivateAssets>all</PrivateAssets>
