--- a/src/services/Apotea.Design.ActorModel.Services.Barcode/Apotea.Design.ActorModel.Services.Barcode.csproj
+++ b/src/services/Apotea.Design.ActorModel.Services.Barcode/Apotea.Design.ActorModel.Services.Barcode.csproj
@@ -6,6 +6,8 @@
 		<PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Sdk" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Orleans.OrleansTelemetryConsumers.Counters" Version="3.7.1" />
+		<PackageReference Include="Microsoft.Orleans.OrleansTelemetryConsumers.Linux" Version="3.7.1" />
 	</ItemGroup>
 
 	<ItemGroup>
