--- a/src/tools/Apotea.Design.ActorModel.Dashboard/Apotea.Design.ActorModel.Dashboard.csproj
+++ b/src/tools/Apotea.Design.ActorModel.Dashboard/Apotea.Design.ActorModel.Dashboard.csproj
@@ -1,13 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+		<PackageReference Include="OrleansDashboard" Version="8.0.0" />
+		<PackageReference Include="OrleansDashboard.Client" Version="2.4.5" />
+		<PackageReference Include="OrleansDashboard.Core" Version="8.0.0" />
+		<PackageReference Include="OrleansDashboard.EmbeddedAssets" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Reminders.Redis" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
-		<PackageReference Include="OrleansDashboard" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Orleans.OrleansTelemetryConsumers.Counters" Version="3.7.1" />
 		<PackageReference Include="Microsoft.Orleans.OrleansTelemetryConsumers.Linux" Version="3.7.1" />
 	</ItemGroup>
